--- a/twitter.ipynb
+++ b/twitter.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWMjtJMPCJAosduhAiYKDk",
+      "authorship_tag": "ABX9TyMpDaNyenJmB98bbtTga6dW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 32,
       "metadata": {
         "id": "NWqr-tmxfWiv"
       },
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "QcQzOBfTga-y"
       },
-      "execution_count": 55,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -58,28 +58,25 @@
       "source": [
         "from nltk.util import pr\n",
         "stemmer = nltk.SnowballStemmer(\"english\")\n",
-        "nltk.download('stopwords')\n",
+        "from nltk.corpus import stopwords\n"
+      ],
+      "metadata": {
+        "id": "-3XaqRVgftFZ"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import string\n",
         "stopword = set(stopwords.words(\"english\"))\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-3XaqRVgftFZ",
-        "outputId": "834b8f56-0f62-4040-bb02-5c49137a1d1b"
+        "id": "uTmfR5D75vRP"
       },
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
-          ]
-        }
-      ]
+      "execution_count": 35,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -89,7 +86,7 @@
       "metadata": {
         "id": "lVMke6-Gf-KI"
       },
-      "execution_count": 57,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -102,9 +99,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xemZkD9GhOtu",
-        "outputId": "92ee4fb7-0695-47ff-e5ea-a120ec3c5705"
+        "outputId": "7d627e73-b340-4c5f-e97f-ad84a8af5d6b"
       },
-      "execution_count": 58,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +127,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df['labels'] = df['class'].map({0: 'Hate Speech',1: 'Vulgar',2:'Hate Speech'})\n",
+        "df['labels'] = df['class'].map({0: 'Hate Speech',1: 'Vulgar',2:'Neither'})\n",
         "print(df.head())"
       ],
       "metadata": {
@@ -138,9 +135,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QyKkkcYXnoQP",
-        "outputId": "e25b5080-f6c4-459e-d92a-a23e50529a9f"
+        "outputId": "5828bc38-57e2-4f22-eaf3-598b08ab9cc4"
       },
-      "execution_count": 59,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,12 +150,12 @@
             "3           3      3            0                   2        1      1   \n",
             "4           4      6            0                   6        0      1   \n",
             "\n",
-            "                                               tweet       labels  \n",
-            "0  !!! RT @mayasolovely: As a woman you shouldn't...  Hate Speech  \n",
-            "1  !!!!! RT @mleew17: boy dats cold...tyga dwn ba...       Vulgar  \n",
-            "2  !!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby...       Vulgar  \n",
-            "3  !!!!!!!!! RT @C_G_Anderson: @viva_based she lo...       Vulgar  \n",
-            "4  !!!!!!!!!!!!! RT @ShenikaRoberts: The shit you...       Vulgar  \n"
+            "                                               tweet   labels  \n",
+            "0  !!! RT @mayasolovely: As a woman you shouldn't...  Neither  \n",
+            "1  !!!!! RT @mleew17: boy dats cold...tyga dwn ba...   Vulgar  \n",
+            "2  !!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby...   Vulgar  \n",
+            "3  !!!!!!!!! RT @C_G_Anderson: @viva_based she lo...   Vulgar  \n",
+            "4  !!!!!!!!!!!!! RT @ShenikaRoberts: The shit you...   Vulgar  \n"
           ]
         }
       ]
@@ -174,20 +171,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6DCqseI3q591",
-        "outputId": "d41a2fa2-ea1f-435e-f0d6-f042942fb574"
+        "outputId": "5be37912-941e-4868-b2fe-944bab0254d6"
       },
-      "execution_count": 60,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                                               tweet       labels\n",
-            "0  !!! RT @mayasolovely: As a woman you shouldn't...  Hate Speech\n",
-            "1  !!!!! RT @mleew17: boy dats cold...tyga dwn ba...       Vulgar\n",
-            "2  !!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby...       Vulgar\n",
-            "3  !!!!!!!!! RT @C_G_Anderson: @viva_based she lo...       Vulgar\n",
-            "4  !!!!!!!!!!!!! RT @ShenikaRoberts: The shit you...       Vulgar\n"
+            "                                               tweet   labels\n",
+            "0   rt mayasolov woman shouldnt complain clean ho...  Neither\n",
+            "1   rt  boy dat coldtyga dwn bad cuffin dat hoe  ...   Vulgar\n",
+            "2   rt urkindofbrand dawg rt  ever fuck bitch sta...   Vulgar\n",
+            "3             rt cganderson vivabas look like tranni   Vulgar\n",
+            "4   rt shenikarobert shit hear might true might f...   Vulgar\n"
           ]
         }
       ]
@@ -216,20 +213,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0BzinvvFo5mU",
-        "outputId": "357cd379-400f-4306-8c02-b971b3f06336"
+        "outputId": "ff107f92-b0e2-411a-8a84-4cca76a7eff3"
       },
-      "execution_count": 61,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                                               tweet       labels\n",
-            "0   rt mayasolov woman shouldnt complain clean ho...  Hate Speech\n",
-            "1   rt  boy dat coldtyga dwn bad cuffin dat hoe  ...       Vulgar\n",
-            "2   rt urkindofbrand dawg rt  ever fuck bitch sta...       Vulgar\n",
-            "3             rt cganderson vivabas look like tranni       Vulgar\n",
-            "4   rt shenikarobert shit hear might true might f...       Vulgar\n"
+            "                                               tweet   labels\n",
+            "0   rt mayasolov woman shouldnt complain clean ho...  Neither\n",
+            "1   rt  boy dat coldtyga dwn bad cuffin dat hoe  ...   Vulgar\n",
+            "2   rt urkindofbrand dawg rt  ever fuck bitch sta...   Vulgar\n",
+            "3              rt cganderson vivaba look like tranni   Vulgar\n",
+            "4   rt shenikarobert shit hear might true might f...   Vulgar\n"
           ]
         }
       ]
@@ -251,9 +248,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E1wYMDvHk9o8",
-        "outputId": "f4937481-7b3d-4fc7-d662-7e77a36788f1"
+        "outputId": "bfd72e23-03aa-44eb-e680-5d8f3741c0f3"
       },
-      "execution_count": 62,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -263,14 +260,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 43
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "test = \"You are a good boy\"\n",
+        "test = \"killing, he must be a black\"\n",
         "df = cv.transform([test]).toarray()\n",
         "print(clf.predict(df))"
       ],
@@ -279,15 +276,43 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LcPUKYC0ue7e",
-        "outputId": "befc2a68-5990-4dc5-a844-6a061dab47b0"
+        "outputId": "ce2bcfed-ff9f-453d-f8ea-f83417e243f8"
       },
-      "execution_count": 68,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Hate Speech']\n"
+            "['Neither']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clf.delete_endpoint()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 222
+        },
+        "id": "A9-0OsSQ_0X4",
+        "outputId": "67d7027e-decc-4c7f-ae20-03961dc7df0a"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-53-d677fe0557df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete_endpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'DecisionTreeClassifier' object has no attribute 'delete_endpoint'"
           ]
         }
       ]
